--- a/Python Challenge 100+/Day_3.ipynb
+++ b/Python Challenge 100+/Day_3.ipynb
@@ -330,6 +330,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-19T04:00:35.228425Z",
+     "start_time": "2020-08-19T04:00:35.218315Z"
+    }
+   },
+   "source": [
+    "~~~Mysql\n",
+    "Select n From counts\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python \n",
+    "n_list=input()\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
