--- a/Python Challenge 100+/Day_2.ipynb
+++ b/Python Challenge 100+/Day_2.ipynb
@@ -354,11 +354,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-17T22:15:26.878890Z",
-     "start_time": "2020-08-17T22:15:07.924379Z"
+     "end_time": "2020-08-21T04:57:35.070113Z",
+     "start_time": "2020-08-21T04:57:17.131857Z"
     }
    },
    "outputs": [
@@ -366,8 +366,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello world\n",
-      "Practice makes perfect\n",
+      "HELLO WORLD\n",
+      "PRACTICE MAKES PERFECT\n",
       "\n",
       "HELLO WORLD\n",
       "PRACTICE MAKES PERFECT\n"
@@ -377,10 +377,10 @@
    "source": [
     "lt=[]\n",
     "while True:\n",
-    "    line=input()\n",
+    "    line=input() # string\n",
     "    if len(line)==0:\n",
     "        break\n",
-    "    lt.append(line.upper())\n",
+    "    lt.append(line.upper())#upper could be used on only 1 item\n",
     "for line in lt:\n",
     "    print(line)"
    ]
