--- a/TensorFlow Developer Professional Certificate Program /AI for Everbody.ipynb
+++ b/TensorFlow Developer Professional Certificate Program /AI for Everbody.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Demystifying AI\n",
+    "## Demystifying AI\n",
     "`AI: ANI, AGI`<br>\n",
     "\n",
     "ANI: **artificial narrow intelligence** e.g. amart speaker, self-driving car, web search, AI in farming and factories\n",
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Building AI Projects\n",
+    "## Building AI Projects\n",
     "`key steps of a machine learning project`\n",
     "* Collect data\n",
     "* Train model: iterate many times until good enough\n",
@@ -117,14 +117,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Building AI in your company"
+    "## Building AI in your company"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Case study: smart speaker\n",
+    "### Case study: smart speaker\n",
     "`Steps to process the command`\n",
     "\"Hey device, tell me a joke\"\n",
     "* _Trigger word/wakeword detection_: audio -> 'hey device' 0/1\n",
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Case study: Self-drving car\n",
+    "### Case study: Self-drving car\n",
     "`Steps for deciding how to drive`\n",
     "\n",
     "Image/Radar/Lidar + GPS, Maps => (Car detection & Pedestrian derection => Trajectory prediction) & Lane detection & Traffic light detection & obstacle detection => Motion Planning => Steer/Accelerate/Brake"
@@ -146,13 +146,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### AI Transformation\n",
+    "### excute pilot projects to gain momentum\n",
+    "### build an in-house AI team \n",
+    "### provide broad AI training\n",
+    "### develop an AI strategy\n",
+    "### develop internal and external communications"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### AI and Society"
+    "## AI and Society"
    ]
   },
   {
