--- a/Python for Data Science and Machine Learning Bootcamp/01-Python-Crash-Course/02-Python Crash Course Exercises.ipynb
+++ b/Python for Data Science and Machine Learning Bootcamp/01-Python-Crash-Course/02-Python Crash Course Exercises.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** What is 7 to the power of 4?**"
+    "**What is 7 to the power of 4?**"
    ]
   },
   {
@@ -54,11 +54,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Split this string:**\n",
+    "**Split this string:**\n",
     "\n",
     "    s = \"Hi there Sam!\"\n",
     "    \n",
-    "**into a list. **"
+    "**into a list.**"
    ]
   },
   {
@@ -104,12 +104,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Given the variables:**\n",
+    "**Given the variables:**\n",
     "\n",
     "    planet = \"Earth\"\n",
     "    diameter = 12742\n",
     "\n",
-    "** Use .format() to print the following string: **\n",
+    "**Use .format() to print the following string:**\n",
     "\n",
     "    The diameter of Earth is 12742 kilometers."
    ]
@@ -155,14 +155,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Given this nested list, use indexing to grab the word \"hello\" **"
+    "**Given this nested list, use indexing to grab the word \"hello\"**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-08-23T22:29:00.766786Z",
+     "start_time": "2020-08-23T22:29:00.763091Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -171,8 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-23T22:30:12.590441Z",
+     "start_time": "2020-08-23T22:30:12.586633Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -180,24 +188,31 @@
        "'hello'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "lst[3][1][2][0]"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Given this nested dictionary grab the word \"hello\". Be prepared, this will be annoying/tricky **"
+    "**Given this nested dictionary grab the word \"hello\". Be prepared, this will be annoying/tricky**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-23T22:45:30.789831Z",
+     "start_time": "2020-08-23T22:45:30.786187Z"
+    }
+   },
    "outputs": [],
    "source": [
     "d = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'hello']}]}]}"
@@ -205,8 +220,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-23T22:45:32.739091Z",
+     "start_time": "2020-08-23T22:45:32.734777Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -214,18 +234,20 @@
        "'hello'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "d['k1'][3]['tricky'][3]['target'][3]"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** What is the main difference between a tuple and a list? **"
+    "**What is the main difference between a tuple and a list?**"
    ]
   },
   {
@@ -243,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Create a function that grabs the email website domain from a string in the form: **\n",
+    "**Create a function that grabs the email website domain from a string in the form:**\n",
     "\n",
     "    user@domain.com\n",
     "    \n",
@@ -252,17 +274,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-08-23T22:47:13.748754Z",
+     "start_time": "2020-08-23T22:47:13.745966Z"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def domainGet(email):\n",
+    "    return email.split('@')[-1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-23T22:47:16.770316Z",
+     "start_time": "2020-08-23T22:47:16.765369Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -270,7 +303,7 @@
        "'domain.com'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,22 +316,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Create a basic function that returns True if the word 'dog' is contained in the input string. Don't worry about edge cases like a punctuation being attached to the word dog, but do account for capitalization. **"
+    "**Create a basic function that returns True if the word 'dog' is contained in the input string. Don't worry about edge cases like a punctuation being attached to the word dog, but do account for capitalization.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-08-23T22:51:25.429617Z",
+     "start_time": "2020-08-23T22:51:25.426793Z"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def findDog(string):\n",
+    "    return 'dog' in string.lower().split()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-23T22:51:28.134479Z",
+     "start_time": "2020-08-23T22:51:28.129772Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -306,7 +350,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,20 +363,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Create a function that counts the number of times the word \"dog\" occurs in a string. Again ignore edge cases. **"
+    "**Create a function that counts the number of times the word \"dog\" occurs in a string. Again ignore edge cases.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-23T22:53:03.416460Z",
+     "start_time": "2020-08-23T22:53:03.412839Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "def countDog(string):\n",
+    "    count=0\n",
+    "    for word in string.lower().split():\n",
+    "        if word=='dog':\n",
+    "            count+=1 \n",
+    "    return count"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-23T22:53:05.912228Z",
+     "start_time": "2020-08-23T22:53:05.907875Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -340,7 +401,7 @@
        "2"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Use lambda expressions and the filter() function to filter out words from a list that don't start with the letter 's'. For example:**\n",
+    "**Use lambda expressions and the filter() function to filter out words from a list that start with the letter 's'. For example:**\n",
     "\n",
     "    seq = ['soup','dog','salad','cat','great']\n",
     "\n",
@@ -364,9 +425,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-08-23T22:54:11.239789Z",
+     "start_time": "2020-08-23T22:54:11.236771Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -375,8 +439,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-23T22:54:24.608371Z",
+     "start_time": "2020-08-23T22:54:24.603960Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -384,12 +453,14 @@
        "['soup', 'salad']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "list(filter(lambda x: x[0]=='s',seq))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -400,25 +471,42 @@
     "  to return one of 3 possible results: \"No ticket\", \"Small ticket\", or \"Big Ticket\". \n",
     "  If your speed is 60 or less, the result is \"No Ticket\". If speed is between 61 \n",
     "  and 80 inclusive, the result is \"Small Ticket\". If speed is 81 or more, the result is \"Big    Ticket\". Unless it is your birthday (encoded as a boolean value in the parameters of the function) -- on your birthday, your speed can be 5 higher in all \n",
-    "  cases. **"
+    "  cases.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-08-23T22:57:52.427599Z",
+     "start_time": "2020-08-23T22:57:52.422753Z"
+    }
    },
    "outputs": [],
    "source": [
     "def caught_speeding(speed, is_birthday):\n",
-    "    pass"
+    "    if is_birthday:\n",
+    "        Speed=speed-5\n",
+    "    else:\n",
+    "        Speed=speed\n",
+    "    if Speed > 80:\n",
+    "        return 'Big Ticket'\n",
+    "    elif Speed > 60:\n",
+    "        return 'Small Ticket'\n",
+    "    else:\n",
+    "        return 'No Ticket'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-23T22:57:56.227442Z",
+     "start_time": "2020-08-23T22:57:56.222753Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -426,7 +514,7 @@
        "'Small Ticket'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,8 +525,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-23T22:57:58.624257Z",
+     "start_time": "2020-08-23T22:57:58.620047Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -446,20 +539,13 @@
        "'Big Ticket'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "caught_speeding(81,False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Great job!"
    ]
   }
  ],
