--- a/Python for Data Science and Machine Learning Bootcamp/02-Python-for-Data-Analysis-NumPy/01-NumPy Arrays.ipynb
+++ b/Python for Data Science and Machine Learning Bootcamp/02-Python-for-Data-Analysis-NumPy/01-NumPy Arrays.ipynb
@@ -40,8 +40,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:11:22.581909Z",
-     "start_time": "2020-08-23T23:11:22.400283Z"
+     "end_time": "2020-08-24T01:16:24.227570Z",
+     "start_time": "2020-08-24T01:16:24.124262Z"
     }
    },
    "outputs": [],
@@ -73,8 +73,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:11:25.344122Z",
-     "start_time": "2020-08-23T23:11:25.334258Z"
+     "end_time": "2020-08-24T01:16:24.238532Z",
+     "start_time": "2020-08-24T01:16:24.229358Z"
     }
    },
    "outputs": [
@@ -99,8 +99,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:11:27.696280Z",
-     "start_time": "2020-08-23T23:11:27.691345Z"
+     "end_time": "2020-08-24T01:16:24.244536Z",
+     "start_time": "2020-08-24T01:16:24.240471Z"
     }
    },
    "outputs": [
@@ -124,8 +124,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:11:34.839846Z",
-     "start_time": "2020-08-23T23:11:34.835397Z"
+     "end_time": "2020-08-24T01:16:24.250583Z",
+     "start_time": "2020-08-24T01:16:24.245981Z"
     }
    },
    "outputs": [
@@ -150,8 +150,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:11:36.898648Z",
-     "start_time": "2020-08-23T23:11:36.894786Z"
+     "end_time": "2020-08-24T01:16:24.256536Z",
+     "start_time": "2020-08-24T01:16:24.252653Z"
     }
    },
    "outputs": [
@@ -195,8 +195,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:12:15.226184Z",
-     "start_time": "2020-08-23T23:12:15.221422Z"
+     "end_time": "2020-08-24T01:16:24.262637Z",
+     "start_time": "2020-08-24T01:16:24.257935Z"
     }
    },
    "outputs": [
@@ -220,8 +220,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:12:17.720745Z",
-     "start_time": "2020-08-23T23:12:17.716433Z"
+     "end_time": "2020-08-24T01:16:24.268835Z",
+     "start_time": "2020-08-24T01:16:24.264718Z"
     }
    },
    "outputs": [
@@ -254,8 +254,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:12:20.203385Z",
-     "start_time": "2020-08-23T23:12:20.198388Z"
+     "end_time": "2020-08-24T01:16:24.276386Z",
+     "start_time": "2020-08-24T01:16:24.271852Z"
     }
    },
    "outputs": [
@@ -279,8 +279,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:12:23.543086Z",
-     "start_time": "2020-08-23T23:12:23.538833Z"
+     "end_time": "2020-08-24T01:16:24.282726Z",
+     "start_time": "2020-08-24T01:16:24.278287Z"
     }
    },
    "outputs": [
@@ -308,8 +308,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:12:26.102351Z",
-     "start_time": "2020-08-23T23:12:26.097708Z"
+     "end_time": "2020-08-24T01:16:24.288158Z",
+     "start_time": "2020-08-24T01:16:24.284429Z"
     }
    },
    "outputs": [
@@ -333,8 +333,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:12:28.007415Z",
-     "start_time": "2020-08-23T23:12:28.001873Z"
+     "end_time": "2020-08-24T01:16:24.293788Z",
+     "start_time": "2020-08-24T01:16:24.289667Z"
     }
    },
    "outputs": [
@@ -368,8 +368,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:12:57.063467Z",
-     "start_time": "2020-08-23T23:12:57.059190Z"
+     "end_time": "2020-08-24T01:16:24.299955Z",
+     "start_time": "2020-08-24T01:16:24.295144Z"
     }
    },
    "outputs": [
@@ -393,8 +393,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:12:59.120293Z",
-     "start_time": "2020-08-23T23:12:59.115329Z"
+     "end_time": "2020-08-24T01:16:24.306521Z",
+     "start_time": "2020-08-24T01:16:24.301982Z"
     }
    },
    "outputs": [
@@ -436,8 +436,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:13:03.157056Z",
-     "start_time": "2020-08-23T23:13:03.151484Z"
+     "end_time": "2020-08-24T01:16:24.311833Z",
+     "start_time": "2020-08-24T01:16:24.308008Z"
     }
    },
    "outputs": [
@@ -478,15 +478,15 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:13:21.038223Z",
-     "start_time": "2020-08-23T23:13:21.032320Z"
+     "end_time": "2020-08-24T01:16:24.317283Z",
+     "start_time": "2020-08-24T01:16:24.313676Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.48417508, 0.31270181])"
+       "array([0.46288597, 0.28539018])"
       ]
      },
      "execution_count": 15,
@@ -503,19 +503,19 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:13:23.525122Z",
-     "start_time": "2020-08-23T23:13:23.519991Z"
+     "end_time": "2020-08-24T01:16:24.323914Z",
+     "start_time": "2020-08-24T01:16:24.318779Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.18444695, 0.7130599 , 0.15829076, 0.76528947, 0.78110492],\n",
-       "       [0.90691825, 0.23751268, 0.57263156, 0.88805839, 0.20738812],\n",
-       "       [0.99215661, 0.70183014, 0.91904318, 0.17686072, 0.25079914],\n",
-       "       [0.21724243, 0.83093572, 0.6990075 , 0.79977005, 0.2252651 ],\n",
-       "       [0.06661029, 0.54486638, 0.13814568, 0.87242258, 0.62032812]])"
+       "array([[0.84659565, 0.87355418, 0.7697568 , 0.73183229, 0.44641988],\n",
+       "       [0.62817803, 0.7575327 , 0.57491912, 0.54641824, 0.03119035],\n",
+       "       [0.0822488 , 0.33087234, 0.93529386, 0.71975403, 0.06775741],\n",
+       "       [0.37986878, 0.55401427, 0.56952374, 0.40846971, 0.6020514 ],\n",
+       "       [0.36209963, 0.38009968, 0.47467345, 0.82636809, 0.07025779]])"
       ]
      },
      "execution_count": 16,
@@ -541,15 +541,15 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:13:30.776838Z",
-     "start_time": "2020-08-23T23:13:30.769362Z"
+     "end_time": "2020-08-24T01:16:24.329245Z",
+     "start_time": "2020-08-24T01:16:24.325447Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1.32654677,  0.66718391])"
+       "array([1.17359599, 0.2919084 ])"
       ]
      },
      "execution_count": 17,
@@ -566,19 +566,19 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:13:42.033057Z",
-     "start_time": "2020-08-23T23:13:42.027421Z"
+     "end_time": "2020-08-24T01:16:24.334910Z",
+     "start_time": "2020-08-24T01:16:24.330521Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.26191574,  0.08015075, -0.25897927,  1.5084529 ,  1.36619086],\n",
-       "       [ 1.37862364,  1.48074048,  0.35035436,  1.93561381,  0.71214623],\n",
-       "       [ 1.43386006, -0.89889249, -0.63494281,  0.22978115,  0.09814392],\n",
-       "       [-0.7669934 ,  1.42525074,  1.06959524,  0.90802616, -0.15050054],\n",
-       "       [ 0.42962222,  0.71606364, -1.31272221, -0.32908416,  1.75276946]])"
+       "array([[-1.20378002, -2.17830858,  2.0582876 ,  0.23227393,  0.64934153],\n",
+       "       [ 0.63218514,  0.58617501, -0.13380556, -0.13205861, -2.01845562],\n",
+       "       [-0.80130244, -1.19729343,  1.64909691, -0.37287054, -0.43659811],\n",
+       "       [-0.30189853, -1.32654615,  1.96138654, -0.82601877, -0.56973689],\n",
+       "       [-1.68528689,  0.2094588 , -0.83659381, -0.40688688,  2.45788767]])"
       ]
      },
      "execution_count": 18,
@@ -603,15 +603,15 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:13:49.806586Z",
-     "start_time": "2020-08-23T23:13:49.800699Z"
+     "end_time": "2020-08-24T01:16:24.340850Z",
+     "start_time": "2020-08-24T01:16:24.336648Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "60"
+       "45"
       ]
      },
      "execution_count": 19,
@@ -628,15 +628,15 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:13:56.845374Z",
-     "start_time": "2020-08-23T23:13:56.840336Z"
+     "end_time": "2020-08-24T01:16:24.346934Z",
+     "start_time": "2020-08-24T01:16:24.342306Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([88, 49, 88, 97, 25, 26, 71, 85, 33, 56])"
+       "array([83, 26, 57, 58, 66, 71, 20, 30, 55, 37])"
       ]
      },
      "execution_count": 20,
@@ -662,8 +662,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:14:02.719546Z",
-     "start_time": "2020-08-23T23:14:02.715952Z"
+     "end_time": "2020-08-24T01:16:24.351250Z",
+     "start_time": "2020-08-24T01:16:24.348542Z"
     }
    },
    "outputs": [],
@@ -677,8 +677,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:14:09.416349Z",
-     "start_time": "2020-08-23T23:14:09.412135Z"
+     "end_time": "2020-08-24T01:16:24.358076Z",
+     "start_time": "2020-08-24T01:16:24.354658Z"
     }
    },
    "outputs": [
@@ -703,15 +703,15 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:14:11.627299Z",
-     "start_time": "2020-08-23T23:14:11.623473Z"
+     "end_time": "2020-08-24T01:16:24.363839Z",
+     "start_time": "2020-08-24T01:16:24.360182Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([20, 30, 16, 12, 10, 43, 46,  9, 34, 47])"
+       "array([19,  6, 18, 12, 49, 26, 36, 12, 30, 15])"
       ]
      },
      "execution_count": 23,
@@ -736,8 +736,8 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:14:22.064393Z",
-     "start_time": "2020-08-23T23:14:22.060739Z"
+     "end_time": "2020-08-24T01:16:24.369825Z",
+     "start_time": "2020-08-24T01:16:24.365626Z"
     }
    },
    "outputs": [
@@ -761,6 +761,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-24T01:16:24.375163Z",
+     "start_time": "2020-08-24T01:16:24.371517Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8,  9],\n",
+       "       [10, 11, 12, 13, 14],\n",
+       "       [15, 16, 17, 18, 19],\n",
+       "       [20, 21, 22, 23, 24]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# -1 blur\n",
+    "arr.reshape(-1,5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -771,21 +801,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:14:28.908401Z",
-     "start_time": "2020-08-23T23:14:28.904733Z"
+     "end_time": "2020-08-24T01:16:24.379915Z",
+     "start_time": "2020-08-24T01:16:24.376694Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([20, 30, 16, 12, 10, 43, 46,  9, 34, 47])"
+       "array([19,  6, 18, 12, 49, 26, 36, 12, 30, 15])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,21 +826,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:14:35.981334Z",
-     "start_time": "2020-08-23T23:14:35.977062Z"
+     "end_time": "2020-08-24T01:16:24.384525Z",
+     "start_time": "2020-08-24T01:16:24.381154Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "47"
+       "49"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,21 +851,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:14:38.997951Z",
-     "start_time": "2020-08-23T23:14:38.993844Z"
+     "end_time": "2020-08-24T01:16:24.388989Z",
+     "start_time": "2020-08-24T01:16:24.385846Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "4"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,21 +876,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:15:12.903071Z",
-     "start_time": "2020-08-23T23:15:12.899012Z"
+     "end_time": "2020-08-24T01:16:24.393874Z",
+     "start_time": "2020-08-24T01:16:24.390718Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "6"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,21 +901,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:15:14.919044Z",
-     "start_time": "2020-08-23T23:15:14.915106Z"
+     "end_time": "2020-08-24T01:16:24.398291Z",
+     "start_time": "2020-08-24T01:16:24.395173Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7"
+       "1"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,11 +935,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:15:36.125209Z",
-     "start_time": "2020-08-23T23:15:36.121232Z"
+     "end_time": "2020-08-24T01:16:24.402378Z",
+     "start_time": "2020-08-24T01:16:24.399507Z"
     }
    },
    "outputs": [
@@ -919,7 +949,7 @@
        "(25,)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,11 +961,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:15:39.938345Z",
-     "start_time": "2020-08-23T23:15:39.934009Z"
+     "end_time": "2020-08-24T01:16:24.406880Z",
+     "start_time": "2020-08-24T01:16:24.403788Z"
     }
    },
    "outputs": [
@@ -946,7 +976,7 @@
        "        16, 17, 18, 19, 20, 21, 22, 23, 24]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,11 +988,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:15:42.640000Z",
-     "start_time": "2020-08-23T23:15:42.634266Z"
+     "end_time": "2020-08-24T01:16:24.411532Z",
+     "start_time": "2020-08-24T01:16:24.408208Z"
     }
    },
    "outputs": [
@@ -972,7 +1002,7 @@
        "(1, 25)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,11 +1013,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:15:44.937977Z",
-     "start_time": "2020-08-23T23:15:44.933650Z"
+     "end_time": "2020-08-24T01:16:24.416100Z",
+     "start_time": "2020-08-24T01:16:24.412672Z"
     }
    },
    "outputs": [
@@ -1021,7 +1051,7 @@
        "       [24]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,11 +1062,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:15:47.480243Z",
-     "start_time": "2020-08-23T23:15:47.475669Z"
+     "end_time": "2020-08-24T01:16:24.420543Z",
+     "start_time": "2020-08-24T01:16:24.417308Z"
     }
    },
    "outputs": [
@@ -1046,7 +1076,7 @@
        "(25, 1)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,11 +1096,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-23T23:15:51.718181Z",
-     "start_time": "2020-08-23T23:15:51.714504Z"
+     "end_time": "2020-08-24T01:16:24.425003Z",
+     "start_time": "2020-08-24T01:16:24.422014Z"
     }
    },
    "outputs": [
@@ -1080,7 +1110,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
