--- a/Python for Data Science and Machine Learning Bootcamp/03-Python-for-Data-Analysis-Pandas/02-Series.ipynb
+++ b/Python for Data Science and Machine Learning Bootcamp/03-Python-for-Data-Analysis-Pandas/02-Series.ipynb
@@ -14,7 +14,9 @@
    "source": [
     "The first main data type we will learn about for pandas is the Series data type. Let's import Pandas and explore the Series object.\n",
     "\n",
-    "A Series is very similar to a NumPy array (in fact it is built on top of the NumPy array object). What differentiates the NumPy array from a Series, is that a Series can have axis labels, meaning it can be indexed by a label, instead of just a number location. It also doesn't need to hold numeric data, it can hold any arbitrary Python Object.\n",
+    "A Series is very similar to a NumPy array (in fact it is built on top of the NumPy array object).\n",
+    "\n",
+    "`What differentiates the NumPy array from a Series, is that a Series can have axis labels, meaning it can be indexed by a label, instead of just a number location. It also doesn't need to hold numeric data, it can hold any arbitrary Python Object.`\n",
     "\n",
     "Let's explore this concept through some examples:"
    ]
