--- a/Python for Data Science and Machine Learning Bootcamp/03-Python-for-Data-Analysis-Pandas/03-DataFrames.ipynb
+++ b/Python for Data Science and Machine Learning Bootcamp/03-Python-for-Data-Analysis-Pandas/03-DataFrames.ipynb
@@ -13,9 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-08-30T00:11:34.917354Z",
+     "start_time": "2020-08-30T00:11:34.344658Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -25,9 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2020-08-30T00:11:36.707823Z",
+     "start_time": "2020-08-30T00:11:36.703704Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -37,8 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-30T00:11:38.245628Z",
+     "start_time": "2020-08-30T00:11:38.238242Z"
+    }
+   },
    "outputs": [],
    "source": [
     "df = pd.DataFrame(randn(5,4),index='A B C D E'.split(),columns='W X Y Z'.split())"
@@ -46,13 +57,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-30T00:11:39.720468Z",
+     "start_time": "2020-08-30T00:11:39.696112Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -112,7 +141,7 @@
        "E  0.190794  1.978757  2.605967  0.683509"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
