--- a/Python for Data Science and Machine Learning Bootcamp/03-Python-for-Data-Analysis-Pandas/03-DataFrames.ipynb
+++ b/Python for Data Science and Machine Learning Bootcamp/03-Python-for-Data-Analysis-Pandas/03-DataFrames.ipynb
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-30T21:17:23.534393Z",
-     "start_time": "2020-08-30T21:17:23.495322Z"
+     "end_time": "2020-09-21T05:58:39.974284Z",
+     "start_time": "2020-09-21T05:58:39.004184Z"
     }
    },
    "outputs": [],
@@ -28,11 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-30T21:17:25.739700Z",
-     "start_time": "2020-08-30T21:17:25.693464Z"
+     "end_time": "2020-09-21T05:58:41.756068Z",
+     "start_time": "2020-09-21T05:58:41.751370Z"
     }
    },
    "outputs": [],
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-30T21:17:27.399049Z",
-     "start_time": "2020-08-30T21:17:27.320487Z"
+     "end_time": "2020-09-21T05:58:43.396614Z",
+     "start_time": "2020-09-21T05:58:43.389833Z"
     }
    },
    "outputs": [],
@@ -57,11 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-30T21:17:29.287298Z",
-     "start_time": "2020-08-30T21:17:29.204240Z"
+     "end_time": "2020-09-21T05:58:44.294655Z",
+     "start_time": "2020-09-21T05:58:44.272508Z"
     }
    },
    "outputs": [
@@ -141,13 +141,63 @@
        "E  0.190794  1.978757  2.605967  0.683509"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-21T06:00:27.165919Z",
+     "start_time": "2020-09-21T06:00:27.161619Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True in df.X.isnull()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-21T06:00:15.298877Z",
+     "start_time": "2020-09-21T06:00:15.292348Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.X.isnull().any()"
    ]
   },
   {
